--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/pulse": "^1.4",
         "laravel/tinker": "^2.10.1",
         "maatwebsite/excel": "*",
+        "milon/barcode": "*",
         "simplesoftwareio/simple-qrcode": "^4.2"
     },
     "require-dev": {
