--- a/composer.json
+++ b/composer.json
@@ -55,8 +55,8 @@
             "@php -r \"file_exists('database/database.sqlite') || touch('database/database.sqlite');\"",
             "@php artisan migrate --graceful --ansi"
         ],
-       "dev": "npx concurrently -k -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74,#86efac\" \"php artisan serve --host=192.168.18.7 --port=8000\" \"php artisan queue:work --timeout=0 --tries=1\" \"php artisan pail --timeout=0\" \"npm run dev\" \"(timeout /t 43200 && composer run dev:kill)\" --names=server,queue,logs,vite,autokill",
-        "dev:kill": "taskkill /F /FI \"WINDOWTITLE eq Laravel Server\" || true && taskkill /F /FI \"WINDOWTITLE eq queue:work\" || true && taskkill /F /FI \"WINDOWTITLE eq npm run dev\" || true && taskkill /F /FI \"WINDOWTITLE eq php artisan pail\" || true",
+        "dev": "npx concurrently -k -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74,#86efac\" \"php artisan serve\" \"php artisan queue:work --timeout=0 --tries=1\" \"php artisan pail --timeout=0\" \"npm run dev\" \"(sleep 43200 && composer run dev:kill)\" --names=server,queue,logs,vite,autokill",
+        "dev:kill": "pkill -f 'php artisan serve' || true && pkill -f 'queue:work' || true && pkill -f 'npm run dev' || true && pkill -f 'php artisan pail' || true",
         "test": [
             "@php artisan config:clear --ansi",
             "@php artisan test"
